# Hybrid

./: .dockerignore  .env.example  .gitignore  .graphifyignore  01_schema.sql  02_policies.sql  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_BUILD_CHECKLIST.md  Caddyfile  Dockerfile  PROJECT.md  README.md  SCALING_PREP_SUMMARY.md  _ANALYSIS.md  _PENDING_WORK_PLAN.md  _PHASE_6_REPORT.md  _S1_EXECUTION_LOG_2026-06-27.md  deploy.sh  docker-compose.prod.phaseb.yml  docker-compose.prod.yml  docker-compose.yml  package.json  piprapay.Dockerfile  pnpm-lock.yaml  sync.sh  tsconfig.base.json  turbo.json
.agents/: AGENTS.md  MEMORY.md  SOUL.md
.claude/: CONTEXT.md  OUTPUT_FORMAT.md
.design-sync/: NOTES.md  compiled.css  config.json  conventions.md  prebuild.mjs  tailwind.config.mjs
.obsidian/: app.json  core-plugins.json  daily-notes.json  graph.json  templates.json
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  crypto.py  db.py  logging_config.py  main.py  security.py
apps/api/app/couriers/: creds.py  status_map.py  steadfast.py  sync.py
apps/api/app/routers/: health.py  jobs.py
apps/api/app/schemas/: common.py  courier.py
apps/api/tests/: conftest.py  test_crypto.py  test_health.py  test_jobs.py  test_status_map.py
docs/: 01_schema.sql  API.md  ARCHITECTURE.md  BUILD_CHECKLIST.md  DECISIONS.md  DEPLOY.md  DESIGN.md  ENV.md  GOAL.md  INFRA_HYBRIDPAY.md  INFRA_SUPABASE.md  P1_5_SUPABASE_OAUTH.md  PLAN.md  PRD.md  SCALING_PLAN.md  SCHEMA.md  STACK.md  TASKS.md  wholesale-b2b-plan.md
graphify-out/: .graphify_python  (+3 more)
(+822 files in other folders)
